[package]
name = "db-task-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = "0.7.12"
clap = { version = "4.5", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"